# Smart_Key_Logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp  structure.txt
ai/: ai_model.cpp  ai_model.h  pybind_typo_corrector.cpp  spelling_corrector.cpp  spelling_corrector.h
analysis/: analyzer.cpp  analyzer.h
data/: dictionary.txt
keylogger/: hook.cpp  hook.h  recorder.cpp  recorder.h
ml/: train.py  typo_correction_dict.py
ml/model/: key_predictor.py
